log
Wed, Apr 16, 2025 10:14:20 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Thu, Apr 17, 2025  4:46:49 PM: 
 hashmap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
441b173
Thu, Apr 17, 2025  4:47:26 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:32: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                ^~
hashmap.c:46:67: error: comparison between pointer and integer [-Werror]
     while(map->buckets[indice] != -1 && map->buckets[indice]->key != -1 ){
                                                                   ^~
cc1.exe: all warnings being treated as errors
d52e860
Thu, Apr 17, 2025  4:47:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b5ebc32
Thu, Apr 17, 2025  4:49:20 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
2ef0ca2
Thu, Apr 17, 2025  4:56:05 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:99:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return indice;
            ^~~~~~
cc1.exe: all warnings being treated as errors
e36e825
Thu, Apr 17, 2025  5:08:55 PM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
443c6db
